# vsb-pgcontest-2022

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  Similarity_join.vcxproj  Similarity_join.vcxproj.filters  compile.sh  run.sh
include/: blocking_queue.hpp  end.hpp  inverted_index.hpp  query.hpp  record.hpp  record_loader.hpp  similarity_join.hpp
presentation/: main.tex
presentation/src/: src.cpp  tux.txt
src/: inverted_index.cpp  main.cpp  record.cpp  record_loader.cpp  self_similarity_join.cpp  similarity_join.cpp
workloads/mini/: input
workloads/small/: input
